# django-loadsql.py

./: README.md  setup.cfg  setup.py
django_loadsql/: __main__.py
django_loadsql/management/commands/: loadsql.py
