# https://pypi.org/project/setupcfg-generator/
[metadata]
name = django-loadsql
version = 2019.9.7
url = https://github.com/andrewp-as-is/django-loadsql.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django load sql

[options]
install_requires =
	Django>1.0
	click
	setuptools
packages =
	django_loadsql
	django_loadsql.management
	django_loadsql.management.commands
